alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@
     padding: 0;
     margin: 0;
     font-family: 'Plus Jakarta Sans', sans-serif;
+    
 }
 body {
-    
-    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+    width: 100vw !important;
 }
 
 footer{
@@ -226,6 +228,7 @@ nav {
 }
 
 #benefit {
+    
     width: 100vw;
     height: auto;
     padding-bottom: 6%;
@@ -292,7 +295,7 @@ nav {
     padding: 0;
     font-weight: bold;
     font-size: 32px;
-    width: 309;
+    width: 309px;
 }
 
 
@@ -317,6 +320,7 @@ nav {
 #property-listings {
     width: 100vw;
     height: auto;
+    
     /* background-image: linear-gradient(to bottom, rgba(247, 241, 76, 0.299), rgba(255, 255, 255, 0)); */
     /* background-image: linear-gradient(to bottom, rgba(247, 241, 76, 0.299), rgba(222, 184, 135, 0.153)); */
     background-image: linear-gradient(to bottom, rgba(247, 241, 76, 0.299), rgba(247, 241, 76, 0.299))
@@ -342,6 +346,8 @@ nav {
 #tenants-and-landlords {
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
     text-align: center;
     /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(247, 241, 76, 0.299)); */
     /* background-image: linear-gradient(to bottom, rgba(247, 241, 76, 0.138), rgb(222, 184, 135)); */
